Implement <script nomodule>

BUG=681050
TEST=external/wpt/html/semantics/scripting-1/the-script-element/nomodule-*

Review-Url: https://codereview.chromium.org/2824583002
Cr-Commit-Position: refs/heads/master@{#465811}

Former-commit-id: 85827883d6102e09951e13c14c8d383cd6e3833f