third_party/WebKit/Source/core/dom/MockScriptElementBase.h
@@ -29,6 +29,7 @@ class MockScriptElementBase
   MOCK_CONST_METHOD0(ForAttributeValue, String());
   MOCK_CONST_METHOD0(IntegrityAttributeValue, String());
   MOCK_CONST_METHOD0(LanguageAttributeValue, String());
+  MOCK_CONST_METHOD0(NomoduleAttributeValue, bool());
   MOCK_CONST_METHOD0(SourceAttributeValue, String());
   MOCK_CONST_METHOD0(TypeAttributeValue, String());
 
